welcome.lessons.welcome.array.array123.Array123.scala.error
array123:1: error: type mismatch;
 found   : Unit
 required: Boolean
def array123(nums:Array[Int]): Boolean = { for (k<-0 to nums.length -3){
                                                 ^